deployment-fcf-iam.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{NombreAppDocker}#
  namespace: #{NameSpaceAppDocker}#
  labels:
    name: #{NombreAppDocker}#
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate # dos replicas o mas
    #type: Recreate # una replica
  selector:
    matchLabels:
      app: #{NombreAppDocker}#
  template:
    metadata:
      labels:
        app: #{NombreAppDocker}#
        version: v#{WS_VERSION}#
    spec:
      containers:
        - name: #{NombreAppDocker}#
          image: #{NombreImagen}#
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          # readinessProbe:
          #     httpGet:
          #       path: /healthz  Ruta de readiness en tu aplicación
          #       port: 80
          #     initialDelaySeconds: 5  Retraso inicial antes de que comience la sonda
          #     periodSeconds: 10        Frecuencia de revisión de readiness
          #     successThreshold: 1
          #     failureThreshold: 5
          # livenessProbe:
          #     httpGet:
          #       path: /healthz   Ruta de liveness en tu aplicación
          #       port: 80
          #     initialDelaySeconds: 10  Retraso inicial antes de que comience la sonda
          #     periodSeconds: 20
          #     successThreshold: 1
          #     failureThreshold: 3
      imagePullSecrets:
        - name: docker-hub-comfenalco

---
apiVersion: v1
kind: Service
metadata:
  name: serv-#{NombreAppDocker}#
  namespace: #{NameSpaceAppDocker}#
  labels:
    name: #{NombreAppDocker}#
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: #{NombreAppDocker}#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-#{NombreAppDocker}#
  namespace: #{NameSpaceAppDocker}#
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - secretName: #{NombreCertificado}#
  rules:
    - host: #{NombreSitio}#
      http:
        paths:
          - path: #{AmbientePublicacion}#
            pathType: Prefix
            backend:
              service:
                name: serv-#{NombreAppDocker}#
                port:
                  number: 80
